SLCORE-445 Honor server settings for secrets in connected mode